margin alignments fixed and browser responsiveness

--- a/css/index_styles.css
+++ b/css/index_styles.css
@@ -47,7 +47,7 @@ header{
     margin-bottom:-60px;
     margin-top: 1px;
     margin-right:auto;
-    margin-left: auto;
+    margin-left: 1%;
     display: inline;
  
 
@@ -174,7 +174,7 @@ navbar-custom .navbar-header a:focus{
     float:left;
    /* margin-top: 110px;
     margin-right:390px;*/
-    overflow: scroll;
+    overflow: hidden;
     padding:10px;
 }
 
@@ -190,14 +190,18 @@ navbar-custom .navbar-header a:focus{
     margin: 25px 0 0 65px;
     text-align: center;
 
-}
 
+}
+#event-ref{
+    font-size:15px;
+    text-decoration: none;
+}
 .event{
     margin-left: auto;
     margin-right: auto;
     margin-top: 25px;
 }
-.event h2,h3,h4{
+#event-title{
     font-family: Raleway;
     font-size: 20px;
     color: #ffffff;
@@ -229,6 +233,7 @@ navbar-custom .navbar-header a:focus{
     border:1px solid;
     background-color:#00693e;
     float:left;
+    overflow: hidden;
 }
 
 #twitter-box h1{
@@ -276,7 +281,7 @@ twitter_update_list{
     background-color: black;
     display: block;
     padding:20px;
-    height:50%;
+    height:auto;
     font-family: Raleway;
     color: #ffffff;
     margin-top: 5%;
@@ -317,10 +322,16 @@ twitter_update_list{
     min-height: 200px;
 }
 
+#footer-social  img{
+    height: 50px;
+    list-style: none;
+    text-decoration: none;
 
+}
 #legal-footer {
     clear:both;
-    margin: 40px auto;    
+    top:20px;
+    position: relative;
 }
 
 
@@ -337,21 +348,12 @@ twitter_update_list{
   margin: 0 0 50px 0; /* Space out the Bootstrap <hr> more */
 }
 
-/*#article-1{
-    padding-left:6px;
 
-}
-#article-2{
-    padding-left:6px;
-}
-#article-3 {
-    padding-left:6px;
-
-}*/
 
 #article img{
     height:auto;
     width: 100%;
+    z-index: 1;
    
 
 }
@@ -418,66 +420,31 @@ span.text-content:hover {
     /*margin-left:6px;
     margin-right:110px;*/
     padding-right:0px;
-
-    overflow: auto;
-
-
+    overflow: hidden;
 }
 
 #article-list-section {
     padding-left: 1.5%;
-    padding-right: 3%;
+    padding-right: 2.5%;
 }
-
+#article h2{
+    font-family: Raleway;
+    color: white;
+    font-size: 36px;
+    position: absolute;
+    top: 0px;
+    right: -35px;
+    width: 100%;
+    text-decoration: underline;
+    z-index: 1000;
+}
 /**---------------- responsive CSS ------------ **/
 
 .horizontal-wrapper{
     overflow: hidden;
+    margin-left: 35px;
 }
 
-/**.horizontal-wrapper .carousel {
-    max-height: 100%;
-
-}**/
-/**@media (min-width: 400px) {
-    .carousel{min-width: 70%;
-    
-    }
-    
-    
-}
-
-@media (min-width: 960px) {
-    .carousel{min-width: 100%;
-    
-    }
-}*/
-
-/**
-@media screen and (min-width:768px){
-    #event-box{
-        max-width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        float:left;
-    
-        
-    }
-**/
-
-/*#nav-social img{
-    width: 42px;
-    height: 46px;
-    margin-left: 10px;
-    margin-top: 13px;
-    */
-
-    
-/*.left a{
-    margin-left: 15px;
-    padding-top: 20px;
-    
-}*/
 
 @media screen and (max-width: 767px) {
    #title-text{
@@ -490,6 +457,12 @@ span.text-content:hover {
         top: 0px;
         left:-8%;
     }
+    span.text-content span{
+        font-size:25px;
+    }
+    .footer-row div:last-child {
+    border-left: none;
+}
 }  
 
 @media screen and (min-width: 768px) {
@@ -497,5 +470,19 @@ span.text-content:hover {
         width:70%;
         height:auto;
     }
+    /*#header-titles{
+        top: 0px;
+    }
+    */
 
-} 
+}
+@media screen and (max-width: 600px) {
+    #title-text{
+    font-size:2em;
+    }
+    #header-titles{
+        font-size:50%;
+    }
+}
+    
+    
